--- a/volleyball/templates/volleyball/base_generic.html
+++ b/volleyball/templates/volleyball/base_generic.html
@@ -38,7 +38,26 @@
         </ul>
      {% endblock %}
       </div>
-      <div class="col-sm-10 ">{% block content %}{% endblock %}</div>
+      <div class="col-sm-10 ">
+          {% block content %}{% endblock %}
+          {% if page_obj %}
+            <div class="pagination">
+              <span class="step-links">
+                  {% if page_obj.has_previous %}
+                      <a href="?page=1">&lt;&lt;</a>
+                      <a href="?page={{ page_obj.previous_page_number }}">&lt;</a>
+                  {% endif %}
+                  <span class="current">
+                      {{ page_obj.number }} &sol;  {{ page_obj.paginator.num_pages }}
+                  </span>
+                  {% if page_obj.has_next %}
+                      <a href="?page={{ page_obj.next_page_number }}">&gt;</a>
+                      <a href="?page={{ page_obj.paginator.num_pages }}">&gt;&gt;</a>
+                  {% endif %}
+              </span>
+            </div>
+          {% endif %}
+      </div>
     </div>
   </div>
 </body>
