--- a/templates/registration/password_reset_email.html
+++ b/templates/registration/password_reset_email.html
@@ -1,2 +1,3 @@
-Someone asked for password reset for email {{ email }}. Follow the link below:
+{% load i18n %}
+{% blocktranslate %}Someone asked for password reset for email {{ email }}. Follow the link below:{% endblocktranslate %}
 {{ protocol}}://{{ domain }}{% url 'password_reset_confirm' uidb64=uid token=token %}
