--- a/templates/registration/password_reset_form.html
+++ b/templates/registration/password_reset_form.html
@@ -1,12 +1,13 @@
 {% extends "volleyball/base_generic.html" %}
+{% load i18n %}
 
 {% block content %}
-  <form action="" method="post">
+  <form  method="post">
   {% csrf_token %}
   {% if form.email.errors %}
     {{ form.email.errors }}
   {% endif %}
       <p>{{ form.email }}</p> 
-    <input type="submit" class="btn btn-default btn-lg" value="Reset password">
+    <input type="submit" class="btn btn-default btn-lg" value="{% translate "Reset password" %}">
   </form>
 {% endblock %}
