--- a/volleyball/templates/volleyball/event_list.html
+++ b/volleyball/templates/volleyball/event_list.html
@@ -1,8 +1,9 @@
 {% extends "volleyball/base_generic.html" %}
+{% load i18n %}
 
 {% block content %}
-  <h1>Events</h1>
-  <a href="{% url 'event-create' %}">create event</a>
+  <h1>{% translate "Events" %}</h1>
+  <a href="{% url 'event-create' %}">{% translate "Create Event" %}</a>
   {% if event_list %}
   <ul>
     {% for event in event_list %}
@@ -12,6 +13,6 @@
     {% endfor %}
   </ul>
   {% else %}
-    <p>There are no events.</p>
+    <p>{% translate "There are no events." %}</p>
   {% endif %}       
 {% endblock %}
