--- a/volleyball/templates/volleyball/group_event_form.html
+++ b/volleyball/templates/volleyball/group_event_form.html
@@ -1,15 +1,15 @@
 {% extends "volleyball/base_generic.html" %}
-
+{% load i18n %}
 {% block content %}
 
-<h1>Create Group Event</h1>
+<h1>{% translate "Create Group Event" %}</h1>
 
   <form method="post">
     {% csrf_token %}
     <table>
     {{ form.as_table }}
     </table>
-    <input type="submit" value="Submit">
+    <input type="submit" value="{% translate "Submit" %}">
   </form>
 
 {% endblock %}
