--- a/volleyball/templates/volleyball/group_list.html
+++ b/volleyball/templates/volleyball/group_list.html
@@ -1,8 +1,9 @@
 {% extends "volleyball/base_generic.html" %}
+{% load i18n %}
 
 {% block content %}
-  <h1>Groups</h1>
-  <a href="{% url 'group-create' %}">create group</a>
+  <h1>{% translate "Groups" %}</h1>
+  <a href="{% url 'group-create' %}">{% translate "Create Group" %}</a>
   {% if group_list %}
   <ul>
     {% for group in group_list %}
@@ -12,6 +13,6 @@
     {% endfor %}
   </ul>
   {% else %}
-    <p>There are no groups.</p>
+    <p>{% translate "There are no groups." %}</p>
   {% endif %}       
 {% endblock %}
