--- a/volleyball/templates/volleyball/settings.html
+++ b/volleyball/templates/volleyball/settings.html
@@ -1,10 +1,11 @@
 {% extends "volleyball/base_generic.html" %}
+{% load i18n %}
 
 {% block content %}
-<h2>Settings</h2>
+<h2>{% translate "Settings" %}</h2>
 <form method="post">
   {% csrf_token %}
   {{ form.as_p }}
-  <button type="submit">Submit</button>
+  <button type="submit">{% translate "Submit" %}</button>
 </form>
 {% endblock %}
