--- a/volleyball/templates/volleyball/group_detail.html
+++ b/volleyball/templates/volleyball/group_detail.html
@@ -36,7 +36,7 @@
   </div>
 
   {% if is_organizer or is_admin %}
-  {% if memberships_pending %}
+  {% if pending_memberships %}
   <hr>
   <div style="margin-left:20px;margin-top:20px">
     <h4>{% translate "Pending" %}</h4>
